[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/osoMANDAR.png" type="Texture" id=1]
[ext_resource path="res://characters/bear.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/bear_growl.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.3333, 57.3333 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 526.667, 72 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 188, 58 )

[node name="Bear" type="KinematicBody2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="bear" type="Sprite" parent="."]
position = Vector2( 0, -1.33334 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.666656 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.333332, -1.66667 )
scale = Vector2( 5.83333, 5.83333 )
process_parent = true
physics_process_parent = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )

[node name="WeaponDetector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponDetector"]
shape = SubResource( 3 )

[node name="Animations" type="AnimationPlayer" parent="."]

[node name="BearGrowl2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 4.0
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="WeaponDetector" to="." method="_on_WeaponDetector_body_entered"]
